--- a/page1.html
+++ b/page1.html
@@ -2,3 +2,12 @@
   <span>`f(x)=frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}{2}}`</span>
   <span>`f(x)=frac{\alpha^{\beta}}{\Gamma{\alpha}}x^{\alpha-1}e^{-\beta x}`</span>
 </div>
+
+<html>
+<body>
+    <div class="formula">
+      <span>`f(x)=frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}{2}}`</span>
+      <span>`f(x)=frac{\alpha^{\beta}}{\Gamma{\alpha}}x^{\alpha-1}e^{-\beta x}`</span>
+    </div>
+</body>
+</html>
